--- a/wiki/Ordering.wiki
+++ b/wiki/Ordering.wiki
@@ -30,8 +30,8 @@ Prices $USD
  * Only PAID orders are processed
 OpenEVSE boards are hand built in limited quantities and will be sold in batches of 20 boards per month starting January 2013. A Wiki will be posted a several weeks before the start of a month. Payment via paypal will be due 1 week prior to the start of the month to purchase all the required parts for the batch.
 
-January http://code.google.com/p/open-evse/wiki/January?ts=1356125971&updated=January
+January [http://code.google.com/p/open-evse/wiki/January?ts=1356125971&updated=January Link]
 
-February
+February [http://code.google.com/p/open-evse/wiki/February?ts=1360551823&updated=February Link]
 
 March
