--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -53,16 +53,17 @@ Payment via paypal to chris1howell83@gmail.com
 || || ales || Built || RGB LCD Built || || ||
 || || jebork || Built || RGB LCD Built - EV Sim || Paid || ||
 || || dlrodd || Built|| RGB LCD RTC Built - EV Sim || || ||
-|| || derekdebu || Built || || || ||
+|| || derekdebu ~ship add in e-mail|| Built || || Paid || ||
 || ||  llMGAll || Built || RGB LCD RTC Built || Paid || ||
 || ||  troy.varela || Built || RBG LDC RTC Built || || ||
 || || dcollins7 ||Kit || LCD kit || Paid || ||
-|| || S.Ciesemier || Built || || EV SIM || ||
+|| || S.Ciesemier || Built || || EV SIM || Paid ||
 || || evnow || Built || LCD RTC Built -EV sim || || ||
-|| || chrisacone || Built|| LCD RTC Built - EV sim || || ||
+|| || chrisacone || Built|| LCD RTC Built - EV sim || Paid || ||
 || || mkfiester || Built || LCD RTC Built - EV Sim || || ||
 || || cathie || Built || LCD RTC Built - EV Sim || || ||
 || || devincarlisto || Built || LCD Built || || || 
 || || iainbarnes || Built|| LCD RTC Built - EV sim || || ||
-|| || jaquescolin || kit || LCD kit - EV Sim || || ||
+|| || jaquescolin || kit || LCD kit - EV Sim || Paid || ||
 || || mc.lacey || Built || || || || 
+|| || King || Built || LCD RTC Built || Paid || ||
