--- a/wiki/OpenEVSEv4partslist.wiki
+++ b/wiki/OpenEVSEv4partslist.wiki
@@ -3,7 +3,10 @@
 = Open EVSE V4 parts list =
 
 If you'd like to built your own EVSE controller board instead of ordering one, here are the parts that you will need.
+
 DigiKey prices updated 8 Feb 2013.
+
+Fast BOM upload: Upload this file to DigiKey for a full pre-built bill of materials: (file coming...)
 
 || *Mfg.* || *Part Number* || *Type* || *Value* || *Name* || *Qty* || *Price* || *URL* || 
 || Atmel || ATMEGA328P-PU || Microprocessor || 328p-pu || IC1|| 1|| $2.88|| http://www.digikey.com/scripts/DkSearch/dksus.dll?vendor=0&keywords=ATMEGA328P-PU-ND || 
