--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -47,7 +47,7 @@ Payment via paypal to chris1howell83@gmail.com
 || ||  jpaction1964 || Built || || Paid || ||
 || || rocketguy || Built || RGB LCD Built || || ||
 || || bikekite || Kit || || || ||
-|| || propoxyphene12 || Kit || || Paid || ||
+|| || propoxyphene12 || Built || RGB LCD w RTC || Paid || ||
 || || rfulcher || Kit || || || || 
 || || Jay || Built || RGB LCD Built - EV Sim || Paid || ||
 || || ales || Built || RGB LCD Built || || ||
