--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -57,12 +57,12 @@ Payment via paypal to chris1howell83@gmail.com
 || ||  llMGAll || Built || RGB LCD RTC Built || Paid || ||
 || ||  troy.varela || Built || RBG LDC RTC Built || || ||
 || || dcollins7 ||Kit || LCD kit || Paid || ||
-|| || S.Ciesemier || Built || || EV SIM || Paid ||
+|| || S.Ciesemier || Built || EV SIM || Paid || ||
 || || evnow || Built || LCD RTC Built -EV sim || || ||
 || || 90410 || || || || ||
 || || chrisacone || Built|| LCD RTC Built - EV sim || Paid || ||
 || || mkfiester || Built || LCD RTC Built - EV Sim || || ||
-|| || cathie || Built || LCD RTC Built - EV Sim || || ||
+|| || cathie || Built || LCD RTC Built - EV Sim || Paid || ||
 || || devincarlisto || Built || LCD Built || || || 
 || || iainbarnes || Built|| LCD RTC Built - EV sim || || ||
 || || jaquescolin || kit || LCD kit - EV Sim || Paid || ||
