--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -42,7 +42,7 @@ Payment via paypal to chris1howell83@gmail.com
 || 17 || wigthft || Built || RGB LCD Built - EV Sim || || ||
 || 18 || jackncoke72 || Built || || Paid || ||
 || 19 || 3400broadway || Built || LCD Built || || ||
-|| 20 ||  bikekite || || || || ||
+|| 20 ||  bikekite || Kit || || Paid || ||
 || || ellweber || Built|| RGB LCD RTC Built - EV Sim || Paid || ||
 || ||  jpaction1964 || Built || || Paid || ||
 || || rocketguy || Built || RGB LCD Built || || ||
