--- a/wiki/AtmelStudio.wiki
+++ b/wiki/AtmelStudio.wiki
@@ -29,9 +29,9 @@ Setting fuse bits only needs to be done once. Fuse bits have nothing to do with 
 
 To set fuse bits from Atmel Studio, select "Tools -> Device Programming". Select your programmer from the _Tool_ drop down, select "ATmega328" from the _Device_ drop down, and select "ISP" from the Interface drop down. Click the Apply button then click "Fuses" on the left side of the dialog window. From here, you can either click check boxes or go directly to the hex numbers at the bottom. I prefer going directly to the hex numbers since I already know what values to use. Use these settings: <br>
 
-Extended: 0xFF <br>
-High: 0xD9 <br>
-Low: 0x62 <br>
+Extended: 0x05 <br>
+High: 0xDA <br>
+Low: 0xFF <br>
 
 The appropriate check boxes will automagically update in the top of the window.
 
