Edited wiki page AtmelStudio through web user interface.

--- a/wiki/AtmelStudio.wiki
+++ b/wiki/AtmelStudio.wiki
@@ -21,13 +21,13 @@ Since the Dragon is my programmer of choice, I have a few hints that will help o
   # Buy a ZIF Socket and solder it to the prototyping area. You can get away with using a 28 pin socket, but that limits you to 28 pin or smaller chips. Buy the 40 pin socket and just use the portion you need. That way you will never wish you had a bigger socket.
   # Use the right device [http://support.atmel.no/knowledgebase/avrstudiohelp/mergedProjects/AVRDragon/AVRDragon.htm#SCKT3200A2.htm connection schematic]. Assuming you soldered headers and a ZIF socket to your Dragon and have your ATmega328 chip installed in the ZIF socket, you will need to map the ISP header to the right pins to perform the programming. Click the link above to go straight to the right one. 
   # Read the schematic and pay attention to numbering. Sounds simple, I know, but pay attention to the numbering on the chip vs the numbering on the header. That 40 pin header is numbered for a 40 pin chip. You are connecting to a chip with 28 pins. Header pins 1-14 match chip pins 1-14, but header pins 15-26 don't connect to anything. Header pins 27-40 map to chip pins 15-28. 
-  # *BUG ALERT!* I encountered a situation where the Dragon refused to enter programming mode several times. Google helped me discover that this is a fairly common problem when using a Dragon to do ISP programming. Don't assume you have a bad chip or a broken Dragon if you get this error. First, try the standard unplug, reconnect, restart Studio, and recheck that you have the wires connected properly. It is possible that the fuse bits got set for external oscillator (HIGHLY likely if you already followed the directions below for fuse bits!) and once that happens the chip needs to have an external clock source between pins 9 & 10 before it will do anything, including accept new programming. Atmel has nothing in their documentation about this, but thankfully the folks at [http://www.avrfreaks.net/index.php?name=PNphpBB2&file=printview&t=122619&start=0 AVRFreaks] figured this out. The solution is simple: plug the chip back into the OpenEVSE board instead of the Dragon prototyping area and connect the ISP cable. This works because the OpenEVSE board just happens to have an external oscillator connected to pins 9 and 10. You could also manually connect an extra oscillator into the prototyping area if you happen to have an extra one laying around.
+  # *BUG ALERT!* I encountered a situation where the Dragon refused to enter programming mode several times. Google helped me discover that this is a fairly common problem when using a Dragon to do ISP programming in the Dragon's prototyping area. Don't assume you have a bad chip or a broken Dragon if you get this error. First, try the standard unplug, reconnect, restart Studio, and recheck that you have the wires connected properly. It is possible that the fuse bits got set for external oscillator (HIGHLY likely if you already followed the directions below for fuse bits!) and once that happens the chip needs to have an external clock source between pins 9 & 10 before it will do anything, including accept new programming. Atmel has nothing in their documentation about this, but thankfully the folks at [http://www.avrfreaks.net/index.php?name=PNphpBB2&file=printview&t=122619&start=0 AVRFreaks] figured this out. The solution is simple: plug the chip back into the OpenEVSE board instead of the Dragon prototyping area and connect the ISP cable. This works because the OpenEVSE board just happens to have an external oscillator connected to pins 9 and 10. You could also manually connect an extra oscillator into the prototyping area if you happen to have an extra one laying around.
   # Consider using HV programming instead of ISP. While ISP is very simple and uses only a few jumper wires, high voltage programming on the prototyping area is much more powerful, faster, and avoids some of the warnings I mentioned above like failing to enter programming mode. The HV programming mode is required to rescue a chip that stopped responding due to improper fuse bit settings. No matter how bad you screwed it up, HV programming will bring it back. The only exception is chips that are physically damaged.
 
 == Set Fuse Bits ==
-Setting fuse bits only needs to be done once. Fuse bits have nothing to do with power overload protection; they are the software equivalent of dip switches (if you are old enough to remember those...) and control how the chip operates. The officially supported fuse bit settings for OpenEVSE will be the best settings for most people, but if you want to experiment with different settings, you can calculate fuse settings here: http://www.engbedded.com/fusecalc
+Setting fuse bits only *needs* to be done once per chip, but you can go back and reset them to different values as many times as you like. Fuse bits have nothing to do with power overload protection; they are the software equivalent of dip switches (if you are old enough to remember those...) and control how the chip operates. The officially supported fuse bit settings for OpenEVSE will be the best settings for most people, but if you want to experiment with different settings, you can calculate fuse settings here: http://www.engbedded.com/fusecalc
 
-To set fuse bits from Atmel Studio, select "Tools -> Device Programming". Select your programmer from the _Tool_ drop down, select "ATmega328" from the _Device_ drop down, and select "ISP" from the Interface drop down. Click the Apply button then click "Fuses" on the left side of the dialog window. From here, you can either click check boxes or go directly to the hex numbers at the bottom. I prefer going directly to the hex numbers since I already know what values to use. Use these settings: <br>
+To set fuse bits from Atmel Studio, select "Tools -> Device Programming". Select your programmer from the _Tool_ drop down, select "ATmega328" from the _Device_ drop down, and select "ISP" from the _Interface_ drop down. Click the Apply button then click "Fuses" on the left side of the dialog window. From here, you can either click check boxes or go directly to the hex numbers at the bottom. I prefer going directly to the hex numbers since I already know what values to use. Use these settings: <br>
 {{{
 Extended: 0x05 <br>
 High: 0xDA <br>
